scrollreveal removed, aos installed and horizontal scroll bug fix

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,6 +29,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	position: relative;
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
