--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,6 +1,6 @@
 .container{
   max-width: 100%;
-  padding: 1rem 1.5rem;
+  padding: 3rem 1.5rem;
 }
 
 .container-dark{
