--- a/src/sass/components/_media.scss
+++ b/src/sass/components/_media.scss
@@ -1,4 +1,4 @@
-@media(min-width: 768px){
+@media(min-width: 620px){
   .header-banner-bg{
     top: calc(-50rem - 50vw);
     left: calc(30rem - 10vw);
