--- a/src/sass/components/_titles.scss
+++ b/src/sass/components/_titles.scss
@@ -2,7 +2,7 @@
   font-size: 2.2rem;
   color: $inovaki-grey;
   font-weight: 700;
-  margin: 3rem 0;
+  margin-bottom: 3rem;
 }
 
 .subtitle{
